added book and author web controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=library-app-259
+spring.datasource.url=jdbc:mysql://localhost:3306/library
+spring.datasource.password=
+spring.datasource.username=root
+server.port=8080
